<resources>
    <string name="app_name">practice_android_4</string>
    <string name="base_url">https://onekyc.kamilpay.com/api/</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="header_icon_description">Naqaq</string>

    <string name="start">Start</string>

    <string name="home_fragment_label">Home</string>
    <string name="main_page_heading">Complete your verification</string>
    <string name="main_page_description">
        Reference site about Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.
    </string>

    <string name="face_detection_fragment_label">Facial Recognition</string>
    <string name="facial_recognition">Facial Recognition</string>
    <string name="facial_recognition_label_1">Put your face in a oval.</string>
    <string name="facial_recognition_label_2">No face detected.</string>
    <string name="facial_recognition_label_3">Multiple faces detected.</string>
    <string name="facial_recognition_label_4">Place your face in the oval.</string>
    <string name="facial_recognition_label_5">Place your face straight in the oval.</string>
    <string name="facial_recognition_label_6">Pleas open your both eyes.</string>
    <string name="facial_recognition_label_7">Pleas don\'t smile.</string>
    <string name="facial_recognition_label_8">Hold your face in this position.</string>
    <string name="facial_recognition_label_9">Your face is too far.</string>
    <string name="facial_recognition_label_10">Your face is too close.</string>
    <string name="facial_recognition_label_11">Low light detected scan in a different position.</string>
    <string name="facial_recognition_label_12">Face is blurry.</string>

    <string name="eid_detection_fragment_label">Eid Detection</string>
    <string name="front_eid_detection_label_1">Fit to front side of eid in frame.</string>
    <string name="back_eid_detection_label_1">Fit to back side of eid in frame.</string>
    <string name="eid_detection_label_1">Please move the camera closer to the document.</string>
    <string name="eid_detection_label_2">If there is glare or reflection scan in a different position.</string>
    <string name="eid_detection_label_3">Please fit eid into frame</string>
    <string name="eid_detection_label_4">Hold eid in this position</string>
    <string name="eid_detection_label_5">Low lighting condition detected, please ensure good lighting while scanning.</string>
    <string name="eid_detection_label_6">Blurry image detected. Ensure clean lens and good lighting. Stay still while scanning.</string>
    <string name="eid_detection_label_info">
        If there are glare or reflections scan in a different position.
        Ensure camera lens is clean.
    </string>

    <string name="process_fragment_label">Process Fragment</string>


</resources>