<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.practice_android_4.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_eidDetection"
            app:destination="@id/eidDetection" />
        <action
            android:id="@+id/action_HomeFragment_to_FaceDetectionFragment"
            app:destination="@id/FaceDetectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/FaceDetectionFragment"
        android:name="com.example.practice_android_4.FaceDetectionFragment"
        android:label="@string/face_detection_fragment_label"
        tools:layout="@layout/fragment_face_detection">
        <action
            android:id="@+id/action_FaceDetectionFragment_to_eidDetection"
            app:destination="@id/eidDetection" />
        <action
            android:id="@+id/action_FaceDetectionFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/eidDetection"
        android:name="com.example.practice_android_4.EidDetectionFragment"
        android:label="@string/eid_detection_fragment_label"
        tools:layout="@layout/fragment_eid_detection">
        <action
            android:id="@+id/action_eidDetection_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_eidDetection_to_FaceDetectionFragment"
            app:destination="@id/FaceDetectionFragment" />
    </fragment>

</navigation>